--- a/simple-website/index.css
+++ b/simple-website/index.css
@@ -83,6 +83,21 @@ input[type=text]:hover,input[type=password]:hover,input[type=submit]:hover {
 	background-color: var(--item-bg-color);
 }
 
+input[type=file] {
+	display: none;
+}
+
+select {
+	color: var(--main-color);
+	background-color: var(--main-bg-secondary-color);
+	border: 1px solid var(--main-bg-color);
+	padding: 0.5em 1em 0.5em 1em;
+	border-radius: 5px;
+
+	font-family: monospace;
+	font-size: 12pt;
+}
+
 main {
 	grid-column: 1/3;
 
@@ -116,6 +131,58 @@ main {
 
 .infoMsgFailure {
 	background-color: var(--failure-color);
+}
+
+#uploadForm {
+	display: grid;
+	grid-row-gap: 0.5em;
+	grid-template-columns: 1fr;
+}
+
+.uploadFormSection {
+	display: flex;
+	justify-content: space-between;
+	align-items: baseline;
+}
+
+.uploadFormSection select:hover {
+	background-color: var(--item-bg-color);
+}
+
+.uploadFormSection label {
+	padding-right: 1em;
+}
+
+.uploadFormSection input[type=submit] {
+	flex-grow: 1;
+}
+
+#fileUploadContainer {
+	flex-grow: 2;
+
+}
+
+.fileUploadBox { 
+	cursor: pointer;
+
+	display: grid;
+	grid-template-columns: 1fr;
+	justify-items: center;
+
+	text-align: center;
+
+	color: var(--main-color);
+	background-color: var(--main-bg-secondary-color);
+	border: 1px solid var(--main-bg-color);
+	padding: 0.5em 1em 0.5em 1em;
+	border-radius: 5px;
+
+	font-family: monospace;
+	font-size: 12pt;
+}
+
+.fileUploadBox:hover {
+	background-color: var(--item-bg-color);
 }
 
 /* ===================== Mobile version ===================== */
