--- a/simple-website/index.css
+++ b/simple-website/index.css
@@ -18,7 +18,7 @@ body {
 
 	display: grid;
 	grid-template-rows: auto minmax(300px, auto);
-	grid-template-columns: 100px 1fr;
+	grid-template-columns: 1fr;
 	grid-row-gap: 1em;
 
 	margin: 0 auto;
@@ -28,21 +28,25 @@ body {
 	grid-row: 1;
 	background-color: var(--main-bg-secondary-color);
 
-	display: flex;
-
-	align-items: center;
-	justify-content: center;
+	margin-right: 2em;
 }
 
 nav {
 	grid-row: 1;
-	grid-column: 2;
+	/*grid-column: 2;*/
 
 	display: flex;
-	gap: 0.5em;
+	gap: 0.75em;
+
+	align-items: center;
+	justify-content: center;
 
 	background-color: var(--main-bg-secondary-color);
 	padding: 0.5em;
+}
+
+#userInfo {
+	margin-left: 2em;
 }
 
 .menuLink {
@@ -235,20 +239,35 @@ a:visited {
 
 @media screen and (max-width: 570px) {
 	body {
-		grid-template-rows: 1fr;
+		grid-template-rows: auto minmax(1fr, 570px);
 		grid-template-columns: auto;
 		grid-gap: 0;
 	}
 
-	nav {
-		grid-row: 2;
-		grid-column: 1;
+	.fileEntry {
+		overflow: clip;
+		word-wrap: break-word;
+		white-space: initial;
+	}
 
-		display: inline-grid;
-		grid-gap: 0.1em;
+	nav {
+		flex-direction: column;
+		align-items: normal;
+		justify-items: stretch;
+
+		grid-gap: 0.2em;
 
 		padding-left: 0;
 		padding-right: 0;
+	}
+
+	#greeting {
+		text-align: center;
+	}
+
+	#userInfo {
+		margin-left: 0;
+		text-align: center;
 	}
 
 	.menuLink {
