Prepare account page

--- a/simple-website/index.css
+++ b/simple-website/index.css
@@ -24,6 +24,10 @@ body {
 	margin: 0 auto;
 }
 
+.hidden {
+	display: none;
+}
+
 #greeting {
 	grid-row: 1;
 	background-color: var(--main-bg-secondary-color);
