--- a/simple-website/index.css
+++ b/simple-website/index.css
@@ -73,7 +73,7 @@ nav {
 	text-decoration-color: forestgreen;
 }
 
-input[type=text],input[type=password],input[type=submit],button {
+input[type=text],input[type=password],input[type=submit],input[type=button],button {
 	color: var(--main-color);
 	background-color: var(--main-bg-secondary-color);
 	border: 1px solid var(--main-bg-color);
@@ -88,7 +88,7 @@ input[type=submit] {
 	cursor: pointer;
 }
 
-input[type=text]:hover,input[type=password]:hover,input[type=submit]:hover,button:hover {
+input[type=text]:hover,input[type=password]:hover,input[type=submit]:hover,input[type=button],button:hover {
 	background-color: var(--item-bg-color);
 	cursor: pointer;
 }
